JumpScript/tests/baselines/reference/unclosedExportClause01.errors.txt
tests/cases/compiler/t2.jump(1,13): error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
tests/cases/compiler/t2.jump(1,18): error TS1005: ',' expected.
tests/cases/compiler/t3.jump(1,10): error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
tests/cases/compiler/t3.jump(1,15): error TS1005: ',' expected.
tests/cases/compiler/t4.jump(1,17): error TS1005: ',' expected.
tests/cases/compiler/t4.jump(1,17): error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
tests/cases/compiler/t4.jump(1,22): error TS1005: ',' expected.
tests/cases/compiler/t5.jump(1,18): error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
tests/cases/compiler/t5.jump(1,23): error TS1005: ',' expected.


==== tests/cases/compiler/t1.jump (0 errors) ====
    export var x = "x";
    
==== tests/cases/compiler/t2.jump (2 errors) ====
    export { x, from "./t1"
                ~~~~
!!! error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
                     ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t3.jump (2 errors) ====
    export { from "./t1"
             ~~~~
!!! error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
                  ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t4.jump (3 errors) ====
    export { x as a from "./t1"
                    ~~~~
!!! error TS1005: ',' expected.
                    ~~~~
!!! error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
                         ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t5.jump (2 errors) ====
    export { x as a, from "./t1"
                     ~~~~
!!! error TS2305: Module '"tests/cases/compiler/t1"' has no exported member 'from'.
                          ~~~~~~
!!! error TS1005: ',' expected.